<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="#FFEB3B"
        android:gravity="center"
        android:text="@string/shared_preferences" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="83dp"
            android:layout_height="match_parent"
            android:text="@string/MobileNumber"
            android:gravity="center" />

        <TextView
            android:id="@+id/SPmobileNumber"
            android:layout_width="184dp"
            android:layout_height="match_parent"
            android:gravity="center"
            />

        <Button
            android:id="@+id/SPnextMSG"
            android:layout_width="55dp"
            android:layout_height="50dp"
            android:onClick="nextShared"
            android:text="@string/NextMessage" />

        <Button
            android:id="@+id/SPprevMSG"
            android:layout_width="56dp"
            android:layout_height="50dp"
            android:onClick="prevShared"
            android:text="@string/PrevMessage" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="81dp"
            android:layout_height="match_parent"
            android:text="@string/Message"
            android:gravity="center" />

        <TextView
            android:id="@+id/SPmessage"
            android:layout_width="189dp"
            android:layout_height="match_parent"
            android:gravity="center"
            />

        <Button
            android:id="@+id/SPclear"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:onClick="clearAllShared"
            android:text="@string/clear" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FFEB3B"
        android:gravity="center"
        android:text="@string/internal_storage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="83dp"
            android:layout_height="match_parent"
            android:text="@string/MobileNumber"
            android:gravity="center" />

        <TextView
            android:id="@+id/INmobileNumber"
            android:layout_width="184dp"
            android:layout_height="match_parent"
            android:gravity="center"
            />

        <Button
            android:id="@+id/INnextMSG"
            android:layout_width="55dp"
            android:layout_height="50dp"
            android:onClick="nextInternal"
            android:text="@string/NextMessage" />

        <Button
            android:id="@+id/INprevMSG"
            android:layout_width="56dp"
            android:layout_height="50dp"
            android:onClick="prevInternal"
            android:text="@string/PrevMessage" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="81dp"
            android:layout_height="match_parent"
            android:text="@string/Message"
            android:gravity="center" />

        <TextView
            android:id="@+id/INmessage"
            android:layout_width="189dp"
            android:layout_height="match_parent"
            android:gravity="center"
            />

        <Button
            android:id="@+id/INclear"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:onClick="clearAllInternal"
            android:text="@string/clear" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FFEB3B"
        android:gravity="center"
        android:text="@string/sql" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="83dp"
            android:layout_height="match_parent"
            android:text="@string/MobileNumber"
            android:gravity="center"/>

        <TextView
            android:id="@+id/SQmobileNumber"
            android:layout_width="184dp"
            android:layout_height="match_parent"
            android:gravity="center"
            />

        <Button
            android:id="@+id/SQSP"
            android:layout_width="55dp"
            android:layout_height="50dp"
            android:onClick="getSQShared"
            android:text="@string/SP" />

        <Button
            android:id="@+id/SQIN"
            android:layout_width="56dp"
            android:layout_height="50dp"
            android:onClick="getSQInternal"
            android:text="@string/in" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="81dp"
            android:layout_height="match_parent"
            android:text="@string/Message"
            android:gravity="center" />

        <TextView
            android:id="@+id/SQmessage"
            android:layout_width="189dp"
            android:layout_height="match_parent"
            android:gravity="center"
            />

        <Button
            android:id="@+id/SQclear"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:onClick="clearAllSQ"
            android:text="@string/clear" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/close"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:onClick="close"
            android:text="@string/Close" />
    </LinearLayout>


</LinearLayout>